# device-check

./: README.md  device-check.cabal  dut-check.cabal
Test/: DeviceCheck.hs  DutCheck.hs
example/: Main.hs
